feat: ready for netlify deployment with Google Analytics and build fixes

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,5 @@
 
 [context.production.environment]
   NEXT_PUBLIC_EMAILJS_SERVICE_ID = "oblivion_contact"
-  NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = "template_XXXXXXX"
-  NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = "XXXXXXXXXXXXXXX"
+  NEXT_PUBLIC_EMAILJS_TEMPLATE_ID = "template_ps2tc5y"
+  NEXT_PUBLIC_EMAILJS_PUBLIC_KEY = "AxamBrcyXe7Bcm_Xw"
