--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@supabase/supabase-js": "^2.39.7",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.0",
-    "buffer": "^6.0.3",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.0",
     "lenis": "^1.1.13",
@@ -25,10 +23,8 @@
     "postcss": "^8.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "recharts": "^2.15.4",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.6.0",
-    "zustand": "^4.5.7"
+    "typescript": "^5.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.18.0",
